CVEs/CVE-2017-6298 (Stream Reader)/Reports/Source_Code_Reports/Infer.txt
#0
ytnef/vtask.c:81: error: Dead Store
  The value written to &charptr2 (type char*) is never used.
  79.     if ((filename != MAPI_UNDEFINED) && (filename->size > 1)) {
  80.       charptr = (char*)filename->data - 1;
  81.       charptr2 = (char *)strstr((char*)(charptr + 1), ";");
            ^
  82.       while (charptr != NULL) {
  83.         charptr++;

#1
ytnef/utility.c:97: error: Null Dereference
  pointer `end` last assigned on line 92 could be null and is dereferenced by call to `strstr()` at line 97, column 9.
  95.   strncpy(link, bgn, size);
  96.   link[size] = '\0';
  97.   bgn = strstr(end, "\\fldrslt");
              ^
  98.   int bSlash = 1;
  99.   for (;;) {

#2
ytnef/utility.c:95: error: Null Dereference
  pointer `link` last assigned on line 94 could be null and is dereferenced by call to `strncpy()` at line 95, column 3.
  93.   unsigned int size = end - bgn;
  94.   link = calloc(size + 1, 1);
  95.   strncpy(link, bgn, size);
        ^
  96.   link[size] = '\0';
  97.   bgn = strstr(end, "\\fldrslt");

#3
ytnefprint/main.c:246: error: Dead Store
  The value written to &filedata (type variableLength*) is never used.
  244.                                          PROP_TAG(PT_BINARY, PR_ATTACH_DATA_OBJ)))
  245.             == MAPI_UNDEFINED) {
  246.           filedata = &(p->FileData);
                 ^
  247.           object = 0;
  248.         }

#4
ytnefprint/main.c:239: error: Dead Store
  The value written to &object (type int) is never used.
  237. 
  238. 
  239.       object = 1;
             ^
  240.       if ((filedata = MAPIFindProperty(&(p->MAPI),
  241.                                        PROP_TAG(PT_OBJECT, PR_ATTACH_DATA_OBJ)))

#5
ytnef/vcal.c:313: error: Dead Store
  The value written to &charptr2 (type char*) is never used.
  311.       if (strlen((char*)filename->data) > 1) {
  312.         charptr = (char*)filename->data - 1;
  313.         charptr2 = (char*)strstr((char*)(charptr + 1), ";");
               ^
  314.         while (charptr != NULL) {
  315.           charptr++;

#6
ytnef/vcal.c:342: error: Dead Store
  The value written to &charptr2 (type char*) is never used.
  340.         if (strlen((char*)filename->data) > 1) {
  341.           charptr = (char*)filename->data - 1;
  342.           charptr2 = (char *)strstr((char*)(charptr + 1), ";");
                 ^
  343.           while (charptr != NULL) {
  344.             charptr++;

#7
ytnef/vcal.c:371: error: Dead Store
  The value written to &charptr2 (type char*) is never used.
  369.         if (strlen((char*)filename->data) > 1) {
  370.           charptr = (char*)filename->data - 1;
  371.           charptr2 = (char *)strstr((char*)(charptr + 1), ";");
                 ^
  372.           while (charptr != NULL) {
  373.             charptr++;

#8
lib/ytnef.c:231: error: Dead Store
  The value written to &j (type int) is never used.
  229. 
  230.   /* just in case the original was not null terminated */
  231.   utf8[j++] = '\0';
              ^
  232. 
  233.   return utf8;

#9
lib/ytnef.c:219: error: Null Dereference
  pointer `utf8` last assigned on line 214 could be null and is dereferenced at line 219, column 7.
  217.     unsigned int c = SwapWord((BYTE *)buf + i, 2);
  218.     if (c <= 0x007f) {
  219.       utf8[j++] = 0x00 | ((c & 0x007f) >> 0);
             ^
  220.     } else if (c < 0x07ff) {
  221.       utf8[j++] = 0xc0 | ((c & 0x07c0) >> 6);

#10
lib/ytnef.c:231: error: Null Dereference
  pointer `utf8` last assigned on line 214 could be null and is dereferenced at line 231, column 3.
  229. 
  230.   /* just in case the original was not null terminated */
  231.   utf8[j++] = '\0';
         ^
  232. 
  233.   return utf8;

#11
lib/ytnef.c:248: error: Null Dereference
  pointer `TNEF->CodePage.data` last assigned on line 247 could be null and is dereferenced by call to `memcpy()` at line 248, column 3.
  246.   TNEF->CodePage.size = size;
  247.   TNEF->CodePage.data = calloc(size, sizeof(BYTE));
  248.   memcpy(TNEF->CodePage.data, data, size);
         ^
  249.   return 0;
  250. }

#12
lib/ytnef.c:266: error: Null Dereference
  pointer `TNEF->body.data` last assigned on line 265 could be null and is dereferenced by call to `memcpy()` at line 266, column 3.
  264.   TNEF->body.size = size;
  265.   TNEF->body.data = calloc(size, sizeof(BYTE));
  266.   memcpy(TNEF->body.data, data, size);
         ^
  267.   return 0;
  268. }

#13
lib/ytnef.c:273: error: Null Dereference
  pointer `TNEF->OriginalMessageClass.data` last assigned on line 272 could be null and is dereferenced by call to `memcpy()` at line 273, column 3.
  271.   TNEF->OriginalMessageClass.size = size;
  272.   TNEF->OriginalMessageClass.data = calloc(size, sizeof(BYTE));
  273.   memcpy(TNEF->OriginalMessageClass.data, data, size);
         ^
  274.   return 0;
  275. }

#14
lib/ytnef.c:285: error: Null Dereference
  pointer `TNEF->from.data` last assigned on line 283 could be null and is dereferenced by call to `memcpy()` at line 285, column 3.
  283.   TNEF->from.data = calloc(size, sizeof(BYTE));
  284.   TNEF->from.size = size;
  285.   memcpy(TNEF->from.data, data, size);
         ^
  286.   return 0;
  287. }

#15
lib/ytnef.c:295: error: Null Dereference
  pointer `TNEF->subject.data` last assigned on line 293 could be null and is dereferenced by call to `memcpy()` at line 295, column 3.
  293.   TNEF->subject.data = calloc(size, sizeof(BYTE));
  294.   TNEF->subject.size = size;
  295.   memcpy(TNEF->subject.data, data, size);
         ^
  296.   return 0;
  297. }

#16
lib/ytnef.c:337: error: Null Dereference
  pointer `p->IconData.data` last assigned on line 336 could be null and is dereferenced by call to `memcpy()` at line 337, column 3.
  335.   p->IconData.size = size;
  336.   p->IconData.data = calloc(size, sizeof(BYTE));
  337.   memcpy(p->IconData.data, data, size);
         ^
  338.   return 0;
  339. }

#17
lib/ytnef.c:350: error: Dead Store
  The value written to &count (type unsigned int) is never used.
  348. 
  349.   d = (BYTE*)data;
  350.   count = SwapDWord((BYTE*)d, 4);
         ^
  351.   d += 4;
  352. //    printf("Recipient Table containing %u rows\n", count);

#18
lib/ytnef.c:351: error: Dead Store
  The value written to &d (type unsigned char*) is never used.
  349.   d = (BYTE*)data;
  350.   count = SwapDWord((BYTE*)d, 4);
  351.   d += 4;
         ^
  352. //    printf("Recipient Table containing %u rows\n", count);
  353. 

#19
lib/ytnef.c:416: error: Dead Store
  The value written to &length (type unsigned int) is never used.
  414.       mp->count = 1;
  415.       mp->namedproperty = 0;
  416.       length = -1;
             ^
  417.       if (PROP_ID(mp->id) >= 0x8000) {
  418.         // Read the GUID

#20
lib/ytnef.c:491: error: Dead Store
  The value written to &offset (type int) is never used.
  489.         // Make sure to read in a multiple of 4
  490.         num = vl->size;
  491.         offset = ((num % 4) ? (4 - num % 4) : 0);
               ^
  492.         d += num + ((num % 4) ? (4 - num % 4) : 0);
  493.         break;

#21
lib/ytnef.c:707: error: Null Dereference
  pointer `p->Title.data` last assigned on line 706 could be null and is dereferenced by call to `memcpy()` at line 707, column 3.
  705.   p->Title.size = size;
  706.   p->Title.data = calloc(size, sizeof(BYTE));
  707.   memcpy(p->Title.data, data, size);
         ^
  708. 
  709.   return 0;

#22
lib/ytnef.c:721: error: Null Dereference
  pointer `p->FileData.data` last assigned on line 718 could be null and is dereferenced by call to `memcpy()` at line 721, column 3.
  719.   p->FileData.size = size;
  720. 
  721.   memcpy(p->FileData.data, data, size);
         ^
  722. 
  723.   return 0;

#23
lib/ytnef.c:1444: error: Null Dereference
  pointer `comp_Prebuf.data` last assigned on line 1443 could be null and is dereferenced by call to `memcpy()` at line 1444, column 3.
  1442.   comp_Prebuf.size = strlen(RTF_PREBUF);
  1443.   comp_Prebuf.data = calloc(comp_Prebuf.size+1, 1);
  1444.   memcpy(comp_Prebuf.data, RTF_PREBUF, comp_Prebuf.size);
          ^
  1445. 
  1446.   src = p->data;

#24
lib/ytnef.c:1474: error: Null Dereference
  pointer `dst` last assigned on line 1473 could be null and is dereferenced by call to `memcpy()` at line 1474, column 5.
  1472.     int flags = 0;
  1473.     dst = calloc(comp_Prebuf.size + uncompressedSize, 1);
  1474.     memcpy(dst, comp_Prebuf.data, comp_Prebuf.size);
            ^
  1475.     out = comp_Prebuf.size;
  1476.     while (out < (comp_Prebuf.size + uncompressedSize)) {

Found 25 issues
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 14
              Dead Store(DEAD_STORE): 11
